--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>user@awalter.net:/$</title>
+		<title>user@awalter.net:/$ welcome</title>
 		<link rel="stylesheet" href="/css/app.css"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
+		<link rel="manifest" href="/icon/site.webmanifest">
+		<link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="/icon/favicon.ico">
+		<meta name="apple-mobile-web-app-title" content="awalter.net">
+		<meta name="application-name" content="awalter.net">
+		<meta name="msapplication-TileColor" content="#000000">
+		<meta name="msapplication-config" content="/icons/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<div id="app">
-			<Console></Console>
+			<component v-if="state" v-bind:is="state" v-bind="data"></component>
 		</div>
 		<script src="/js/manifest.js"></script>
 		<script src="/js/vendor.js"></script>
