--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div id="app">
-			<component v-if="state" v-bind:is="state" v-bind="data"></component>
+			<screen></screen>
 		</div>
 		<script src="/js/manifest.js"></script>
 		<script src="/js/vendor.js"></script>
