--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<link rel="manifest" href="/icon/site.webmanifest">
 		<link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="shortcut icon" href="/icon/favicon.ico">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="apple-mobile-web-app-title" content="awalter.net">
 		<meta name="application-name" content="awalter.net">
 		<meta name="msapplication-TileColor" content="#000000">
