Implement power button

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<div id="app">
-			<screen></screen>
+			<Screen></Screen>
 		</div>
 		<script src="/js/manifest.js"></script>
 		<script src="/js/vendor.js"></script>
